syntax = "proto3";
package ETModel;
enum MSG{
	_Default = 0;
	_ActorResponse = 30; //Actor回复信息
	_ResponseMessage = 1; //回复信息
	_ObjectAddRequest = 20; //添加对象
	_ObjectAddResponse = 21; //添加对象
	_ObjectRemoveRequest = 22; //删除对象
	_ObjectRemoveResponse = 23; //删除对象
	_ObjectLockRequest = 24; //锁定对象
	_ObjectLockResponse = 25; //锁定对象
	_ObjectUnLockRequest = 26; //取消锁定对象
	_ObjectUnLockResponse = 27; //取消锁定对象
	_ObjectGetRequest = 28; //获取对象
	_ObjectGetResponse = 29; //获取对象
	_C2WEB_UserLogin = 2; //用户登录
	_WEB2C_UserLogin = 3; //用户登录返回
	_C2WEB_CreateRole = 4; //创建角色
	_WEB2C_CreateRole = 5; //用户登录返回
	_C2S_UserLogin = 6; //用户登录
	_S2C_UserLogin = 7; //用户登录返回
	_SaveRoleInfo = 8; //读取用户信息
	_S2C_RoleInfo = 9; //通知用户信息发生变化
	_ServerHeart = 10; //服务器心跳
	_S2L_RegisterServer = 11; //注册服务器
	_G2M_CreateUnit = 12; //通知地图服务器创建unit
	_M2G_CreateUnit = 13; //通知地图服务器创建unit
	_G2L_GetMapAddress = 14; //获取指定类型map 的地址
	_L2G_GetMapAddress = 15; //通知地图服务器创建unit
	_C2M_EnterRoom = 18; //用户进入房间
	_M2C_EnterRoom = 19; //用户进入房间
	_G2M_UnitDispose = 31; //釋放unit
}
//对象信息
message ObjectInfo{
	int64 Key = 1;//key
	int64 InstanceId = 2;//实例编号
	string Address = 3;//地址
}

//int属性
message AttrInt{
	int32 K = 1;//key
	int64 V = 2;//值
}

//str属性
message AttrStr{
	int32 K = 1;//key
	string V = 2;//值
}

//服务器信息
message ServerInfo{
	int32 ServerId = 1;//服务器编号
	int32 ServerType = 2;//服务器类型
	string NetInnerIp = 3;//内部Ip
	int32 NetInnerPort = 4;//内部端口
}

//角色数据存储信息
message RoleDbInfo{
	int32 RoleId = 1;//角色编号
	repeated AttrInt AttrInts = 2;//角色int属性
	repeated AttrStr AttrStrs = 3;//角色int属性
}

//Actor回复信息
message ActorResponse{
	int32 Tag = 98;
	int32 RpcId = 99;
	string Message = 100;
}

//回复信息
message ResponseMessage{
	int32 Tag = 98;
	int32 RpcId = 99;
	string Message = 100;
}

//添加对象
message ObjectAddRequest{
	ObjectInfo Item = 1;//对象
	int32 RpcId = 99;
}

//添加对象
message ObjectAddResponse{
	int32 Tag = 98;
	int32 RpcId = 99;
	string Message = 100;
}

//删除对象
message ObjectRemoveRequest{
	int64 Key = 1;//对象编号
	int32 RpcId = 99;
}

//删除对象
message ObjectRemoveResponse{
	int32 Tag = 98;
	int32 RpcId = 99;
	string Message = 100;
}

//锁定对象
message ObjectLockRequest{
	ObjectInfo Item = 1;//对象
	int32 Time = 2;//实例ID
	int32 RpcId = 99;
}

//锁定对象
message ObjectLockResponse{
	int32 Tag = 98;
	int32 RpcId = 99;
	string Message = 100;
}

//取消锁定对象
message ObjectUnLockRequest{
	int64 Key = 1;//对象编号
	int64 OldInstanceId = 2;//实例ID
	int64 InstanceId = 3;//实例ID
	int32 RpcId = 99;
}

//取消锁定对象
message ObjectUnLockResponse{
	int32 Tag = 98;
	int32 RpcId = 99;
	string Message = 100;
}

//获取对象
message ObjectGetRequest{
	int64 Key = 1;//对象编号
	int32 RpcId = 99;
}

//获取对象
message ObjectGetResponse{
	ObjectInfo Item = 1;//对象
	int32 Tag = 98;
	int32 RpcId = 99;
	string Message = 100;
}

//用户登录
message C2WEB_UserLogin{
	string UserName = 1;//帐号
	string UserPass = 2;//密码
}

//用户登录返回
message WEB2C_UserLogin{
	int32 tag = 1;//结果
	int32 AccountId = 2;//帐号ID
	bool IsCreateRole = 3;//是否创建角色
	int64 Timestamp = 4;//时间戳
	string Ip = 5;//ip
	int32 Port = 6;//端口
	string Sign = 7;//签名
}

//创建角色
message C2WEB_CreateRole{
	int32 AccountId = 1;//帐号Id
	string RoleName = 2;//角色名称
	int64 Timestamp = 3;//时间戳
	string Sign = 4;//签名
}

//用户登录返回
message WEB2C_CreateRole{
	int32 tag = 1;//结果
	int32 AccountId = 2;//帐号ID
	bool IsCreateRole = 3;//是否创建角色
	int64 Timestamp = 4;//时间戳
	string Ip = 5;//ip
	int32 Port = 6;//端口
	string sign = 7;//签名
}

//用户登录
message C2S_UserLogin{
	int32 AccountId = 1;//帐号ID
	int64 Timestamp = 2;//时间戳
	string sign = 3;//签名
	int32 RpcId = 99;
}

//用户登录返回
message S2C_UserLogin{
	int64 UnitId = 1;//UnitID
	int32 Tag = 98;
	int32 RpcId = 99;
	string Message = 100;
}

//读取用户信息
message SaveRoleInfo{
	int32 RoleId = 1;//角色编号
	bytes RoleData = 2;//角色数据
}

//通知用户信息发生变化
message S2C_RoleInfo{
	int32 RoleId = 1;//角色编号
	repeated AttrInt AttrInts = 2;//角色int属性
	repeated AttrStr AttrStrs = 3;//角色str属性
}

//服务器心跳
message ServerHeart{
	int32 ServerId = 1;//服务器编号
	string ServerName = 2;//服务器名称
	string Ip = 3;//服务器IP
	int32 Port = 4;//服务器端口
	int32 Online = 5;//在线人数
}

//注册服务器
message S2L_RegisterServer{
	ServerInfo Info = 1;//服务器信息
	int32 RpcId = 99;
}

//通知地图服务器创建unit
message G2M_CreateUnit{
	int32 AccountId = 1;//服务器信息
	int64 GateSessionId = 2;//网关sessionid
	int32 RpcId = 99;
}

//通知地图服务器创建unit
message M2G_CreateUnit{
	int64 UnitId = 1;//unit编号
	int32 Tag = 98;
	int32 RpcId = 99;
	string Message = 100;
}

//获取指定类型map 的地址
message G2L_GetMapAddress{
	int32 MapType = 1;//map类型
	int32 RpcId = 99;
}

//通知地图服务器创建unit
message L2G_GetMapAddress{
	string Address = 1;//地址
	int32 Tag = 98;
	int32 RpcId = 99;
	string Message = 100;
}

//用户进入房间
message C2M_EnterRoom{
	int32 RoomType = 1;//房间类型
	int32 RoomId = 2;//房间编号
	int32 RpcId = 99;
	int64 ActorId = 100;
}

//用户进入房间
message M2C_EnterRoom{
	int32 RoomId = 1;//房间编号
	int32 Tag = 98;
	int32 RpcId = 99;
	string Message = 100;
}

//釋放unit
message G2M_UnitDispose{
	int32 RpcId = 99;
	int64 ActorId = 100;
}

